fixed  checkbox visibility overriding global reset

--- a/src/components/OrderForm.module.css
+++ b/src/components/OrderForm.module.css
@@ -126,6 +126,8 @@
 }
 
 .checkbox {
+  appearance: auto;
+  -webkit-appearance: checkbox;
   width: 1.25rem;
   height: 1.25rem;
   cursor: pointer;
